[package]
name = "mist"
version = "0.1.0"
edition = "2024"

[lib]
name = "mist"
crate-type = ["staticlib"]

[dependencies]
tokio = { version = "1.37", features = [
    "rt-multi-thread", 
    "macros",
    "sync"
] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
serde = { version = "1.0", features = [
    "derive"
] }
serde_json = "1.0"
windows = { version = "0.61.3", features = [
	"Win32_Foundation",
	"Win32_System_Diagnostics_Debug",
	"Win32_System_Diagnostics_Debug_Extensions",
	"Win32_System_Diagnostics_ToolHelp",
	"Win32_System_ProcessStatus",
	"Win32_System_Threading",
    "Win32_Security",
	"Win32_Globalization"
] }
